# smooth_ui_toolkit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  library.properties
.github/workflows/: cmake-multi-platform.yml
cmake/: basic.cmake  esp_idf.cmake
example/: CMakeLists.txt  basic.cpp  dev_zone.cpp  fetch_repos.py  repos.json
example/basic/: animate.cpp  animate_color.cpp  animate_value.cpp  animate_value_options.cpp  animte_sequence.cpp  basic_animations.cpp  bubbles.cpp  dev_zone.cpp  multi_cursor.cpp  ui_hal.cpp
example/event/: event_queue.cpp  signal.cpp
example/games/: breakout.cpp  dvd_screensaver.cpp
example/smooth_lvgl/: lvgl_cpp.cpp  number_flow.cpp  number_flow_ext.cpp
example/utils/: lv_conf.h  lvgl_wrapper.h  lvgl_wrapper.hpp  raylib_wrapper.h  raylib_wrapper.hpp
example/widget/: fixed_selector_h_stack_menu.cpp  fixed_selector_v_stack_curved_menu.cpp  horizontal_stack_menu.cpp  smooth_options_menu.cpp  smooth_selector_menu.cpp
src/: smooth_menu.cpp  smooth_menu.h  smooth_ui_toolkit.cpp  smooth_ui_toolkit.h  smooth_ui_toolkit.hpp
src/anim_point_2d/: anim_point_2d.h
src/animation/animate/: animate.cpp  animate.h  animate.hpp
src/animation/animate_value/: animate_value.cpp  animate_value.h  animate_value.hpp
src/animation/animate_vector/: animate_vector2.cpp  animate_vector2.h  animate_vector2.hpp  animate_vector4.cpp  animate_vector4.h  animate_vector4.hpp
src/animation/generators/: generators.h  generators.hpp
src/animation/generators/easing/: easing.cpp  easing.h  easing.hpp
src/animation/generators/spring/: spring.cpp  spring.h  spring.hpp
src/animation/sequence/: animate_sequence.cpp  animate_sequence.h  animate_sequence.hpp  animate_value_sequence.cpp  animate_value_sequence.h
src/basic_types/: basic_types.h
src/camera/: camera.cpp  camera.h
src/chart/smooth_line_chart/: smooth_line_chart.cpp  smooth_line_chart.h
src/core/: core.hpp
src/core/anim1d/: anim1d.cpp  anim1d.h
src/core/anim_point_2d/: anim_point_2d.cpp  anim_point_2d.h
src/core/animation/animate/: animate.cpp  animate.hpp
src/core/animation/animate_value/: animate_value.cpp
src/core/animation/animate_vector/: animate_vector2.cpp  animate_vector2.hpp  animate_vector4.cpp  animate_vector4.hpp
src/core/animation/generators/: generators.hpp
src/core/animation/sequence/: animate_sequence.cpp
src/core/color/: color.cpp  color.hpp
src/core/cubic_bezier/: cubic_bezier.cpp  cubic_bezier.h
src/core/easing/cubic_bezier/: cubic_bezier.cpp
src/core/easing_path/: easing_path.cpp  easing_path.h
src/core/math/: color.cpp  graphic.cpp  math.cpp  math.h  math.hpp  vector.hpp
src/core/smooth1d/: smooth1d.cpp  smooth1d.h
src/core/smooth_color/: smooth_color.cpp  smooth_color.h
src/core/smooth_drag/: smooth_drag.cpp  smooth_drag.h
src/core/smooth_point/: smooth_point.cpp  smooth_point.h
src/core/transition/: smooth1d.h  transition.cpp  transition.h
src/core/transition2d/: transition2d.cpp  transition2d.h
src/core/transition3d/: transition3d.cpp  transition3d.h
src/core/transition4d/: transition4d.cpp  transition4d.h
src/core/types/: types.cpp  types.h
src/dragger/: dragger.cpp  dragger.h
src/games/: games.hpp
src/games/arkanoid/: arkanoid.hpp
src/games/breakout/: ball.hpp  breakout.hpp  brick.hpp  paddle.hpp  types.hpp
src/games/core/: collision.hpp  core.h  frame_clock.hpp  game_object.cpp  game_object.hpp  shape.hpp  world.hpp
src/games/dvd_screensaver/: dvd_screensaver.hpp
src/lv_anim/: lv_anim.cpp  lv_anim.h
src/lvgl/: smooth_lvgl.h  smooth_lvgl.hpp
src/lvgl/lvgl_cpp/: bar.hpp  button.h  button.hpp  calendar.h  calendar.hpp  canvas.h  canvas.hpp  chart.h  chart.hpp  image.h  image.hpp  label.h  label.hpp  line.h  line.hpp  lv_wrapper.h  lv_wrapper.hpp  obj.h  obj.hpp  qrcode.hpp  roller.h  roller.hpp  screen.h  screen.hpp  slider.h  slider.hpp  spinner.h  spinner.hpp  switch.h  switch.hpp  table.h  table.hpp  text_area.h  text_area.hpp
src/lvgl/number_flow/: digit_flow.h  digit_flow.hpp  number_flow.h  number_flow.hpp  number_flow_float.h  number_flow_float.hpp
src/menu/: menu.cpp  menu.h
src/misc/water_wave_generator/: water_wave_generator.cpp  water_wave_generator.h
src/old/camera/: camera.cpp  camera.h
src/old/lv_anim/: lv_anim.cpp  lv_anim.h
src/old/menu/: menu.cpp  menu.h
src/old/selector/: selector.cpp  selector.h
src/old/simple_menu/: simple_menu.cpp  simple_menu.h
src/select_menu/: select_menu.cpp  select_menu.h
src/select_menu/base/: select_menu_base.h
src/select_menu/smooth_options/: smooth_options.cpp  smooth_options.h
src/select_menu/smooth_selector/: smooth_selector.cpp  smooth_selector.h
src/selector/: selector.cpp  selector.h
src/simple_menu/: simple_menu.cpp  simple_menu.h
src/smooth_widget/base/: base.cpp  base.h
src/smooth_widget/button/: button.cpp  button.h
src/smooth_widget/widget_base/: widget_base.h
src/tools/: tools.hpp
src/tools/event/: signal.hpp
src/tools/fpm/: fixed.hpp  ios.hpp  math.hpp  readme.md
src/tools/observable/: observable.hpp  single_observable.hpp
src/tools/random/: random.hpp
src/tools/ring_buffer/: ring_buffer.hpp
src/uitk/: short_namespace.hpp  short_namespaces.hpp
src/utils/color/: color.cpp  color.h  color.hpp
src/utils/easing/: ease.cpp  ease.h  ease.hpp
src/utils/event/: event_queue.h  event_queue.hpp  signal.h  signal.hpp
src/utils/fpm/: fixed.hpp  readme.md
src/utils/hal/: hal.cpp  hal.h  hal.hpp
src/utils/math/: base.h  base.hpp  math.h  shape.h  shape.hpp  vector.h
src/utils/object_pool/: object_pool.hpp
src/utils/ring_buffer/: ring_buffer.h  ring_buffer.hpp
src/widget/: widget.h  widget.hpp
src/widget/select_menu/: smooth_options.cpp  smooth_options.h  smooth_options.hpp  smooth_selector.cpp  smooth_selector.h  smooth_selector.hpp
src/widgets/base/: base.cpp  base.h
src/widgets/button/: button.cpp
src/widgets/smooth_widget/: smooth_widget.cpp  smooth_widget.h
test/: CMakeLists.txt  area_system_test.cpp  observable_test.cpp  ringbuffer_test.cpp  world_test.cpp
(+25 files in other folders)
